{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 27,
  "lineage": "d7f9956d-01ed-4a60-5e77-4751b3f5f368",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a577bce0a9bae845",
            "domain": "vpc",
            "id": "eipalloc-0a577bce0a9bae845",
            "network_border_group": "ca-central-1",
            "public_dns": "ec2-15-157-172-32.ca-central-1.compute.amazonaws.com",
            "public_ip": "15.157.172.32",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "vibe-check-my-prof-nat-eip"
            },
            "tags_all": {
              "Name": "vibe-check-my-prof-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:148761655945:internet-gateway/igw-045b67c9828a5a8c1",
            "id": "igw-045b67c9828a5a8c1",
            "owner_id": "148761655945",
            "tags": {
              "Name": "vibe-check-my-prof-igw"
            },
            "tags_all": {
              "Name": "vibe-check-my-prof-igw"
            },
            "vpc_id": "vpc-0ff793ea565bf1484"
          },
          "dependencies": [
            "aws_vpc.web_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a577bce0a9bae845",
            "association_id": "eipassoc-0fa8e892b1f474066",
            "connectivity_type": "public",
            "id": "nat-020f9997ad72699cb",
            "network_interface_id": "eni-040a90c2481732035",
            "private_ip": "10.0.1.85",
            "public_ip": "15.157.172.32",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f0e150cdb92cdd6e",
            "tags": {
              "Name": "vibe-check-my-prof-nat-gateway"
            },
            "tags_all": {
              "Name": "vibe-check-my-prof-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnet_1",
            "aws_vpc.web_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:148761655945:route-table/rtb-064d5c96688e17298",
            "id": "rtb-064d5c96688e17298",
            "owner_id": "148761655945",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-020f9997ad72699cb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vibe-check-my-prof-private-route-table"
            },
            "tags_all": {
              "Name": "vibe-check-my-prof-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff793ea565bf1484"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnet_1",
            "aws_vpc.web_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:148761655945:route-table/rtb-0796e54c26946c825",
            "id": "rtb-0796e54c26946c825",
            "owner_id": "148761655945",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-045b67c9828a5a8c1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vibe-check-my-prof-public-route-table"
            },
            "tags_all": {
              "Name": "vibe-check-my-prof-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff793ea565bf1484"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.web_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c3ca443b4fb888a",
            "route_table_id": "rtb-064d5c96688e17298",
            "subnet_id": "subnet-0324907956af8125e"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.web_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c1e6c10bdb86336",
            "route_table_id": "rtb-064d5c96688e17298",
            "subnet_id": "subnet-0ec5b706734e3bf74"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet_1",
            "aws_vpc.web_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d1a43f68942aed1",
            "route_table_id": "rtb-0796e54c26946c825",
            "subnet_id": "subnet-0f0e150cdb92cdd6e"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_1",
            "aws_vpc.web_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073b4882348132561",
            "route_table_id": "rtb-0796e54c26946c825",
            "subnet_id": "subnet-0fedca5867484a871"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_2",
            "aws_vpc.web_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:148761655945:security-group/sg-0fe1d5b9860e7a231",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fe1d5b9860e7a231",
            "ingress": [
              {
                "cidr_blocks": [
                  "70.70.232.24/32"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f5f5ef4d6682839c"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "terraform-20241026205700510000000003",
            "name_prefix": "terraform-",
            "owner_id": "148761655945",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vibe-check-my-prof-backend-sg"
            },
            "tags_all": {
              "Name": "vibe-check-my-prof-backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff793ea565bf1484"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_vpc.web_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:148761655945:security-group/sg-0f5f5ef4d6682839c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f5f5ef4d6682839c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20241026205657997700000002",
            "name_prefix": "terraform-",
            "owner_id": "148761655945",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vibe-check-my-prof-web-server-sg"
            },
            "tags_all": {
              "Name": "vibe-check-my-prof-web-server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff793ea565bf1484"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.web_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:148761655945:subnet/subnet-0324907956af8125e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0324907956af8125e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "148761655945",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vibe-check-my-prof-private-subnet-1"
            },
            "tags_all": {
              "Name": "vibe-check-my-prof-private-subnet-1"
            },
            "vpc_id": "vpc-0ff793ea565bf1484"
          },
          "dependencies": [
            "aws_vpc.web_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:148761655945:subnet/subnet-0ec5b706734e3bf74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec5b706734e3bf74",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "148761655945",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vibe-check-my-prof-private-subnet-2"
            },
            "tags_all": {
              "Name": "vibe-check-my-prof-private-subnet-2"
            },
            "vpc_id": "vpc-0ff793ea565bf1484"
          },
          "dependencies": [
            "aws_vpc.web_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:148761655945:subnet/subnet-0f0e150cdb92cdd6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0e150cdb92cdd6e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "148761655945",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vibe-check-my-prof-public-subnet-1"
            },
            "tags_all": {
              "Name": "vibe-check-my-prof-public-subnet-1"
            },
            "vpc_id": "vpc-0ff793ea565bf1484"
          },
          "dependencies": [
            "aws_vpc.web_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:148761655945:subnet/subnet-0fedca5867484a871",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fedca5867484a871",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "148761655945",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vibe-check-my-prof-public-subnet-2"
            },
            "tags_all": {
              "Name": "vibe-check-my-prof-public-subnet-2"
            },
            "vpc_id": "vpc-0ff793ea565bf1484"
          },
          "dependencies": [
            "aws_vpc.web_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "web_app_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:148761655945:vpc/vpc-0ff793ea565bf1484",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0442b47854cbff0c2",
            "default_route_table_id": "rtb-05ff35405743ee597",
            "default_security_group_id": "sg-06cf138d0243b0617",
            "dhcp_options_id": "dopt-08f284d229959f7e2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ff793ea565bf1484",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05ff35405743ee597",
            "owner_id": "148761655945",
            "tags": {
              "Name": "vibe-check-my-prof-vpc"
            },
            "tags_all": {
              "Name": "vibe-check-my-prof-vpc"
            }
          }
        }
      ]
    }
  ]
}